@@ -31,7 +31,7 @@
 #   define TANF_DISABLED  (1)
 #endif
 
-#if defined(SDCC_z80)
+#if defined(SDCC_z80) || defined(SDCC_gbz80)
 #   define ACOSF_DISABLED (1)
 #   define ASINF_DISABLED (1)
 #   define ATANF_DISABLED (1)
@@ -230,3 +230,4 @@ testFloat (void)
       ASSERT (fabsf (rel_error) < testpoint[i].tolerance);
     }
 }
+
